# prysmatic-mcp

./: README.md
.claude-plugin/: marketplace.json
mcp/: .gitignore  LICENSE  README.md  pyproject.toml
mcp/prysmatic_mcp/: __init__.py  client.py  config.py  server.py
plugins/prysmatic/: .mcp.json
plugins/prysmatic/.claude-plugin/: plugin.json
plugins/prysmatic/skills/prysmatic-api/: SKILL.md
