[project]
name = "prysmatic-mcp"
version = "0.1.2"
description = "Query the Prysmatic API (tracked wallets and tokens) from Claude and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "eserya", email = "eserya77@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "solana", "prysmatic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://prysmatic-sol.xyz"
Documentation = "https://docs.prysmatic-sol.xyz"

[project.scripts]
prysmatic-mcp = "prysmatic_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prysmatic_mcp"]
